--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
 <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
 <script src="https://button.glitch.me/button.js"></script>
 
+<!-- Include the client.js script for dynamic project link rendering -->
+<script src="./client.js" type="text/javascript"></script>
+        
+<!-- Solutions file -->
 <script src="./45-exercises.js" type="text/javascript"></script>
 </body>
 </html>
