--- a/index.html
+++ b/index.html
@@ -126,9 +126,8 @@
                         <li>For Mac, the keyboard shortcut is "Command + Option + i"</li>   
                         <li>For Windows, the keyboard shortcut "Shift + CTRL + j".</li>
                     </ul>
-                    <li>Start writing solutions inside of 45-exercises.js in the editor.</li>
-
-                    <li>Refresh this index.html to re-run you new JS code, then check your JS Console to see that your solution worked or if there's something</li>
+                  <li>Start writing solutions inside of the <a class="solutions-edit-link"><pre>45-exercises.js</pre> file in the editor.</a></li>
+                  <li>Refresh this index.html to re-run you new JS code, then check your JS Console to see that your solution worked or if there's something</li>
                 </ul>
             </article>
             <hr>
