--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <header>
         <img src="https://cdn.glitch.com/165ac023-c836-48b2-9da3-7beda27766a6%2Fcodeup_logo_white.png?v=1603308299550">
         <h1>45 JS Exercises </h1>
+        <img src="https://cdn.glitch.com/165ac023-c836-48b2-9da3-7beda27766a6%2Fcodeup_logo_white.png?v=1603308299550">
     </header>
     <main>
         <section class="troubleshooting">
