--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 </head>
 <body>
     <header>
-        <img src="https://cdn.glitch.com/165ac023-c836-48b2-9da3-7beda27766a6%2Fcodeup_logo_white.png?v=1603308299550">
+        <img id="logo" src="https://cdn.glitch.com/165ac023-c836-48b2-9da3-7beda27766a6%2Fcodeup_logo_white.png?v=1603308299550">
         <h1>45 JS Exercises </h1>
-        <img src="https://cdn.glitch.com/165ac023-c836-48b2-9da3-7beda27766a6%2Fcodeup_logo_white.png?v=1603308299550">
+        <a href="https://glitch.com/edit/#!/remix/45-js-exercises" target="_blank/">
+          <h2>Click here to make a new copy</h2>
+        </a>    
     </header>
     <main>
         <section class="troubleshooting">
