🏯👨‍❤️‍👨 Checkpoint ./style.css:282805/203 ./index.html:282805/1253

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
     <header>
         <img id="logo" src="https://cdn.glitch.com/165ac023-c836-48b2-9da3-7beda27766a6%2Fcodeup_logo_white.png?v=1603308299550">
         <h1>45 JS Exercises </h1>
-        <a href="https://glitch.com/edit/#!/remix/45-js-exercises" target="_blank/">
-          <h2>Click here to make a new copy</h2>
-        </a>    
+<!--         <a href="https://glitch.com/edit/#!/remix/45-js-exercises" target="_blank/"><h3>Click here to make your own copy <br>(remix on Glitch)</h3></a> -->
+        <a href="https://glitch.com/edit/#!/remix/45-js-exercises" target="_blank/"><img src="https://cdn.glitch.com/2703baf2-b643-4da7-ab91-7ee2a2d00b5b%2Fremix-button-v2.svg" alt="Remix on Glitch"></a>
     </header>
     <main>
         <section class="troubleshooting">
@@ -101,8 +100,9 @@
             <article>
                 <h3>Quick Start</h3>
                 <ol>
-                    <li>Create yourself an account on <a href="https://glitch.com">Glitch.com</a></li>
-                    <li>Click on the fish icon in the upper right and select "Remix on Glitch" to make your own copy</li>
+                    <li>Create yourself an account on <a href="https://glitch.com" target="_blank">Glitch.com</a></li>
+                    <li><a href="https://glitch.com/edit/#!/remix/45-js-exercises" target="_blank/">Click here</a> to remixClick on the fish icon in the upper right and select "Remix on Glitch" to make your own copy</li>
+                    <li><a href="https://glitch.com/edit/#!/remix/45-js-exercises" target="_blank/"><img src="https://cdn.glitch.com/2703baf2-b643-4da7-ab91-7ee2a2d00b5b%2Fremix-button-v2.svg" alt="Remix on Glitch"></a></li>
                     <li>Use Glitch.com as your editor</li>
                     <li>Launch index.html with the "Preview" icon in the Glitch editor. The "Preview" icon is at the bottom of the screen. Recommend using "Preview in a New Window"</li>
                     <li>The keyboard shortcut to launch the application is Ctrl + Shift + R (same as previewing in a new window)</li>
@@ -147,9 +147,6 @@
         </section>
     </main> 
 
-
-<div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
-<script src="https://button.glitch.me/button.js"></script>
 
 <!-- Include the client.js script for dynamic project link rendering -->
 <script src="./client.js" type="text/javascript"></script>
