--- a/index.html
+++ b/index.html
@@ -99,9 +99,13 @@
             <article>
                 <h3>Quick Start</h3>
                 <ol>
-                    <li>Create yourself an account on <a href="https://glitch.com" target="_blank">Glitch.com</a></li>
-                    <li><a href="https://glitch.com/edit/#!/remix/45-js-exercises" target="_blank/">Click here</a> to remixClick on the fish icon in the upper right and select "Remix on Glitch" to make your own copy</li>
-                    <li><a href="https://glitch.com/edit/#!/remix/45-js-exercises" target="_blank/"><img src="https://cdn.glitch.com/2703baf2-b643-4da7-ab91-7ee2a2d00b5b%2Fremix-button-v2.svg" alt="Remix on Glitch"></a></li>
+                    <li>Create yourself an account on <a href="https://glitch.com" target="_blank">Glitch.com</a> then return to this page.</li>
+                    <li>Click <a href="https://glitch.com/edit/#!/remix/45-js-exercises">"Remix on Glitch"</a> to make your own copy
+                      <br>
+                      <a href="https://glitch.com/edit/#!/remix/45-js-exercises" target="_blank/" class="remix">
+                        <img src="https://cdn.glitch.com/2703baf2-b643-4da7-ab91-7ee2a2d00b5b%2Fremix-button-v2.svg" alt="Remix on Glitch">
+                      </a>
+                    </li>
                     <li>Use Glitch.com as your editor</li>
                     <li>Launch index.html with the "Preview" icon in the Glitch editor. The "Preview" icon is at the bottom of the screen. Recommend using "Preview in a New Window"</li>
                     <li>The keyboard shortcut to launch the application is Ctrl + Shift + R (same as previewing in a new window)</li>
@@ -128,7 +132,7 @@
                         <li>For Mac, the keyboard shortcut is "Command + Option + i"</li>   
                         <li>For Windows, the keyboard shortcut "Shift + CTRL + j".</li>
                     </ul>
-                  <li>Start writing solutions inside of the <a class="solutions-edit-link"><pre>45-exercises.js</pre> file in the editor.</a></li>
+                  <li>Start writing solutions inside of the <a class="solutions-edit-link">45-exercises.js file</a> in the editor.</li>
                   <li>Refresh this index.html to re-run you new JS code, then check your JS Console to see that your solution worked or if there's something</li>
                 </ul>
             </article>
