--- a/index.html
+++ b/index.html
@@ -20,7 +20,62 @@
         <h1>45 JS Exercises </h1>
         <a href="https://glitch.com/edit/#!/remix/45-js-exercises" target="_blank/"><img src="https://cdn.glitch.com/2703baf2-b643-4da7-ab91-7ee2a2d00b5b%2Fremix-button-v2.svg" alt="Remix on Glitch"></a>
     </header>
-    <main>
+    <main>     
+        <section class="instructions">
+            <h2>Instructions</h2>
+            <article>
+                <h3>Quick Start</h3>
+                <ol>
+                    <li>Create yourself an account on <a href="https://glitch.com" target="_blank">Glitch.com</a> then return to this page.</li>
+                    <li>Click <a href="https://glitch.com/edit/#!/remix/45-js-exercises">"Remix on Glitch"</a> to make your own copy
+                      <br>
+                      <br>
+                      <a href="https://glitch.com/edit/#!/remix/45-js-exercises" target="_blank/" class="remix">
+                        <img src="https://cdn.glitch.com/2703baf2-b643-4da7-ab91-7ee2a2d00b5b%2Fremix-button-v2.svg" alt="Remix on Glitch">
+                      </a>
+                    </li>
+                    <li>Use Glitch.com as your editor</li>
+                    <li>Launch index.html with the "Preview" icon in the Glitch editor. The "Preview" icon is at the bottom of the screen. Recommend using "Preview in a New Window"</li>
+                    <li>The keyboard shortcut to launch the application is Ctrl + Shift + R (same as previewing in a new window)</li>
+                </ol>
+            </article>
+            <hr>
+            <article>
+              <h3>Expected Workflow</h3>
+              <ul>
+                <li>From this page, open the JavaScript console to see the next error.</li>
+                <li>Each error message tells you the next exercise to solve or bug to fix.</li>
+                <li>Use the glitch.com editor to make changes in your 45-exercises.js file</li>
+                <li>Refresh the index.html page</li>
+                <li>Repeat</li>
+              </ul>
+            </article>
+            <article>
+                <h3>Orientation</h3>
+                <ul>
+                    <li>This index.html page shares the instructions and the JS console shows errors.</li>
+                    <li>The only time your JS Console will show no errors is when all the exercises have working solutions.</li>
+                  <li>Open the JavaScript console in <a href="https://developer.mozilla.org/en-US/docs/Tools/Web_Console/Opening_the_Web_Console" target="_blank">Firefox</a> or <a href="https://developer.chrome.com/docs/devtools/open/#console" target="_blank">Chrome</a></li>
+                    <ul>
+                        <li>For Mac, the keyboard shortcut is "Command + Option + i"</li>   
+                        <li>For Windows, the keyboard shortcut "Shift + CTRL + j".</li>
+                    </ul>
+                  <li>Start writing solutions inside of the <a class="solutions-edit-link">45-exercises.js file</a> in the editor.</li>
+                  <li>Refresh this index.html to re-run you new JS code, then check your JS Console to see that your solution worked or if there's something</li>
+                </ul>
+            </article>
+            <hr>
+            <article>
+                  <h3>Video Demonstration of Workflow</h3>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/fvP9Bh_sJyE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </article>
+            <article>
+                <h3>Rationale</h3>
+                <p>45 Exercises exists to help learners gain deep practice with fundamentals, operators, syntax, and converting problems in English to solutions in JS.</p>
+                <p>The best way to learn how to program is write programs. Each exercise is a tiny little program.</p>
+                <p>Expect to do a tremendous amount of search engine searches, make many mistakes, and try again. This is all part of programming. Take breaks.</p>
+            </article>  
+        </section>
         <section class="troubleshooting">
           <article>
                 <h2>Troubleshooting</h2>
@@ -87,62 +142,7 @@
             <article>
                 <p>If you notice any typos, misspellings, or mistakes, please triple check your work and <a href="https://github.com/ryanorsinger/101-exercises-js/issues" target="_blank">open an issue on GitHub</a> citing both the line number and exercise number.</p>
             </article>
-<!--     New Section       -->
           
-        </section>
-        <section class="instructions">
-            <h2>Instructions</h2>
-            <article>
-                  <h3>Video Demonstration of Workflow</h3>
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/fvP9Bh_sJyE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </article>
-            <article>
-                <h3>Quick Start</h3>
-                <ol>
-                    <li>Create yourself an account on <a href="https://glitch.com" target="_blank">Glitch.com</a> then return to this page.</li>
-                    <li>Click <a href="https://glitch.com/edit/#!/remix/45-js-exercises">"Remix on Glitch"</a> to make your own copy
-                      <br>
-                      <a href="https://glitch.com/edit/#!/remix/45-js-exercises" target="_blank/" class="remix">
-                        <img src="https://cdn.glitch.com/2703baf2-b643-4da7-ab91-7ee2a2d00b5b%2Fremix-button-v2.svg" alt="Remix on Glitch">
-                      </a>
-                    </li>
-                    <li>Use Glitch.com as your editor</li>
-                    <li>Launch index.html with the "Preview" icon in the Glitch editor. The "Preview" icon is at the bottom of the screen. Recommend using "Preview in a New Window"</li>
-                    <li>The keyboard shortcut to launch the application is Ctrl + Shift + R (same as previewing in a new window)</li>
-                </ol>
-            </article>
-            <hr>
-            <article>
-              <h3>Expected Workflow</h3>
-              <ul>
-                <li>From this page, open the JavaScript console to see the next error.</li>
-                <li>Each error message tells you the next exercise to solve or bug to fix.</li>
-                <li>Use the glitch.com editor to make changes in your 45-exercises.js file</li>
-                <li>Refresh the index.html page</li>
-                <li>Repeat</li>
-              </ul>
-            </article>
-            <article>
-                <h3>Orientation</h3>
-                <ul>
-                    <li>This index.html page shares the instructions and the JS console shows errors.</li>
-                    <li>The only time your JS Console will show no errors is when all the exercises have working solutions.</li>
-                  <li>Open the JavaScript console in <a href="https://developer.mozilla.org/en-US/docs/Tools/Web_Console/Opening_the_Web_Console" target="_blank">Firefox</a> or <a href="https://stackoverflow.com/questions/66420/how-do-you-launch-the-javascript-debugger-in-google-chrome" target="_blank">Chrome</a></li>
-                    <ul>
-                        <li>For Mac, the keyboard shortcut is "Command + Option + i"</li>   
-                        <li>For Windows, the keyboard shortcut "Shift + CTRL + j".</li>
-                    </ul>
-                  <li>Start writing solutions inside of the <a class="solutions-edit-link">45-exercises.js file</a> in the editor.</li>
-                  <li>Refresh this index.html to re-run you new JS code, then check your JS Console to see that your solution worked or if there's something</li>
-                </ul>
-            </article>
-            <hr>
-            <article>
-                <h3>Rationale</h3>
-                <p>45 Exercises exists to help learners gain deep practice with fundamentals, operators, syntax, and converting problems in English to solutions in JS.</p>
-                <p>The best way to learn how to program is write programs. Each exercise is a tiny little program.</p>
-                <p>Expect to do a tremendous amount of search engine searches, make many mistakes, and try again. This is all part of programming. Take breaks.</p>
-            </article>  
         </section>
         <section class="correct">
             <h2><span id="count"></span><br>Problems Correct</h2>
