🎳👧 Checkpoint ./index.html:282805/1142 ./style.css:282805/51 ./client.js:282805/104

--- a/index.html
+++ b/index.html
@@ -34,22 +34,12 @@
                         <img src="https://cdn.glitch.com/2703baf2-b643-4da7-ab91-7ee2a2d00b5b%2Fremix-button-v2.svg" alt="Remix on Glitch">
                       </a>
                     </li>
-                    <li>Use Glitch.com as your editor</li>
-                    <li>Launch index.html with the "Preview" icon in the Glitch editor. The "Preview" icon is at the bottom of the screen. Recommend using "Preview in a New Window"</li>
+                  <li>Use Glitch.com's editor to edit the code in the <a class="solutions-edit-link">45-exercises.js</a> file.</li>
+                    <li>Launch index.html with the "🔎 Preview" icon in the Glitch editor. The "Preview" icon is at the bottom of the screen. Recommend using "Preview in a New Window"</li>
                     <li>The keyboard shortcut to launch the application is Ctrl + Shift + R (same as previewing in a new window)</li>
                 </ol>
             </article>
             <hr>
-            <article>
-              <h3>Expected Workflow</h3>
-              <ul>
-                <li>From this page, open the JavaScript console to see the next error.</li>
-                <li>Each error message tells you the next exercise to solve or bug to fix.</li>
-                <li>Use the glitch.com editor to make changes in your 45-exercises.js file</li>
-                <li>Refresh the index.html page</li>
-                <li>Repeat</li>
-              </ul>
-            </article>
             <article>
                 <h3>Orientation</h3>
                 <ul>
@@ -63,6 +53,16 @@
                   <li>Start writing solutions inside of the <a class="solutions-edit-link">45-exercises.js file</a> in the editor.</li>
                   <li>Refresh this index.html to re-run you new JS code, then check your JS Console to see that your solution worked or if there's something</li>
                 </ul>
+            </article>
+            <article>
+              <h3>Expected Workflow</h3>
+              <ul>
+                <li>From this page, open the JavaScript console to see the next error.</li>
+                <li>Each error message tells you the next exercise to solve or bug to fix.</li>
+                <li>Use the glitch.com editor to make changes in your 45-exercises.js file</li>
+                <li>Refresh the index.html page</li>
+                <li>Repeat</li>
+              </ul>
             </article>
             <hr>
             <article>
