--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                 <h3>Quick Start</h3>
                 <ol>
                     <li>Create yourself an account on <a href="https://glitch.com" target="_blank">Glitch.com</a> then return to this page.</li>
-                    <li>Click <a href="https://glitch.com/edit/#!/remix/45-js-exercises">"Remix on Glitch"</a> to make your own copy
+                    <li>Click <a href="https://glitch.com/edit/#!/remix/45-js-exercises">"Remix on Glitch"</a> to make your own copy of these exercises. Your own copy will have a randomly generated name.
                       <br>
                       <br>
                       <a href="https://glitch.com/edit/#!/remix/45-js-exercises" target="_blank/" class="remix">
                         <img src="https://cdn.glitch.com/2703baf2-b643-4da7-ab91-7ee2a2d00b5b%2Fremix-button-v2.svg" alt="Remix on Glitch">
                       </a>
                     </li>
-                  <li>Use Glitch.com's editor to edit the code in the <a class="solutions-edit-link">45-exercises.js</a> file.</li>
-                    <li>Launch index.html with the "🔎 Preview" icon in the Glitch editor. The "Preview" icon is at the bottom of the screen. Recommend using "Preview in a New Window"</li>
-                    <li>The keyboard shortcut to launch the application is Ctrl + Shift + R (same as previewing in a new window)</li>
+                    <li>Use Glitch.com's editor to edit the code in the <a class="solutions-edit-link" target="_blank">45-exercises.js</a> file.</li>
+                    <li>View your <a href="" class="preview" target="_blank">index.html</a> with the "🔎 Preview" icon in the Glitch editor. The "Preview" icon is at the bottom of the screen. Recommend using "Preview in a New Window"</li>
+                    <li>The keyboard shortcut to launch the application is Ctrl + Shift + R (keyboard shortcuts are powerful helpers)</li>
                 </ol>
             </article>
             <hr>
@@ -50,8 +50,8 @@
                         <li>For Mac, the keyboard shortcut is "Command + Option + i"</li>   
                         <li>For Windows, the keyboard shortcut "Shift + CTRL + j".</li>
                     </ul>
-                  <li>Start writing solutions inside of the <a class="solutions-edit-link">45-exercises.js file</a> in the editor.</li>
-                  <li>Refresh this index.html to re-run you new JS code, then check your JS Console to see that your solution worked or if there's something</li>
+                  <li>Start writing solutions inside of the <a class="solutions-edit-link" target="_blank">45-exercises.js file</a> in the editor.</li>
+                  <li>Refresh this <a href="" class="preview" target="_blank">index.html</a> to re-run you new JS code, then check your JS Console to see that your solution worked or if there's something</li>
                 </ul>
             </article>
             <article>
@@ -59,8 +59,8 @@
               <ul>
                 <li>From this page, open the JavaScript console to see the next error.</li>
                 <li>Each error message tells you the next exercise to solve or bug to fix.</li>
-                <li>Use the glitch.com editor to make changes in your 45-exercises.js file</li>
-                <li>Refresh the index.html page</li>
+                <li>Use the glitch.com editor to make changes in your <a class="solutions-edit-link" target="_blank">45-exercises.js file</a></li>
+                <li>Refresh the <a href="" class="preview" target="_blank">index.html</a> page</li>
                 <li>Repeat</li>
               </ul>
             </article>
