--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             <hr>
             <article>
               <h3>What to do when you don't know what to do next</h3>
-              <p>When the exercise asks you to reverse an array in JavaScript, the way forward is to search for <em>"How to reverse an array in JavaScript"</em> in your favorite search engine.</p>
-              <p>When the exercise asks you to check if a number is even, the way forward is to search for <em>"how to check if a number is even in JavaScript"</em>.</p>
+              <p>When the exercise asks you to reverse an array in JavaScript, the way forward is to search for <em><a href="https://www.google.com/search?q=how+to+reverse+an+array+in+javascript&oq=How+to+reverse+an+array+in+JavaScript" target="_blank">"How to reverse an array in JavaScript"</em></a> in your favorite search engine.</p>
+              <p>When the exercise asks you to check if a number is even, the way forward is to search for <em><a href="" target="_blank"></a>"how to check if a number is even in JavaScript"</em>.</p>
               <p>When the exercise has you calculate the area of a circle, the way forward is to search for <em>"how to calculate the area of a circle in JavaScript"</em> or <em>"How to get pi in JavaScript"</em>.</p>
               <p>The pattern for finding what you need in JavaScript is to rely very heavily on search engine searches so you can find examples of working code and discussions about code that speak to your questions.</p> 
             </article>
