--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <li>For Mac, the keyboard shortcut is "Command + Option + i"</li>   
                         <li>For Windows, the keyboard shortcut "Shift + CTRL + j".</li>
                     </ul>
-                  <li>Start writing solutions inside of the <a class="solutions-edit-link" target="_blank">45-exercises.js file</a> in the editor.</li>
+                  <li>Start writing solutions inside of the <a class="solutions-edit-link" target="_blank">45-exercises.js</a>file in the editor.</li>
                   <li>Refresh this <a href="" class="preview" target="_blank">index.html</a> to re-run you new JS code, then check your JS Console to see that your solution worked or if there's something</li>
                 </ul>
             </article>
@@ -59,7 +59,7 @@
               <ul>
                 <li>From this page, open the JavaScript console to see the next error.</li>
                 <li>Each error message tells you the next exercise to solve or bug to fix.</li>
-                <li>Use the glitch.com editor to make changes in your <a class="solutions-edit-link" target="_blank">45-exercises.js file</a></li>
+                <li>Use the glitch.com editor to make changes in your <a class="solutions-edit-link" target="_blank">45-exercises.js</a> file</li>
                 <li>Refresh the <a href="" class="preview" target="_blank">index.html</a> page</li>
                 <li>Repeat</li>
               </ul>
@@ -94,9 +94,9 @@
             <hr>
             <article>
               <h3>What to do when you don't know what to do next</h3>
-              <p>When the exercise asks you to reverse an array in JavaScript, the way forward is to search for <em><a href="https://www.google.com/search?q=how+to+reverse+an+array+in+javascript&oq=How+to+reverse+an+array+in+JavaScript" target="_blank">"How to reverse an array in JavaScript"</em></a> in your favorite search engine.</p>
-              <p>When the exercise asks you to check if a number is even, the way forward is to search for <em><a href="https://www.google.com/search?q=how+to+reverse+an+array+in+javascript" target="_blank">"how to check if a number is even in JavaScript"</em></a>.</p>
-              <p>When the exercise has you calculate the area of a circle, the way forward is to search for <em>"how to calculate the area of a circle in JavaScript"</em> or <em>"How to get pi in JavaScript"</em>.</p>
+              <p>When the exercise asks you to reverse an array in JavaScript, the way forward is to search for <em><a href="https://www.google.com/search?q=how+to+reverse+an+array+in+javascript&oq=How+to+reverse+an+array+in+JavaScript" target="_blank">"How to reverse an array in JavaScript"</a></em> in your favorite search engine.</p>
+              <p>When the exercise asks you to check if a number is even, the way forward is to search for <em><a href="https://www.google.com/search?q=how+to+reverse+an+array+in+javascript" target="_blank">"how to check if a number is even in JavaScript"</a></em>.</p>
+              <p>When the exercise has you calculate the area of a circle, the way forward is to search for <em><a href="https://www.google.com/search?q=how+to+calculate+the+area+of+a+circle+in+javascript" target="_blank">"how to calculate the area of a circle in JavaScript"</a></em> or <em><a href="How to get pi in JavaScript" target="_blank">"How to get pi in JavaScript"</a></em>.</p>
               <p>The pattern for finding what you need in JavaScript is to rely very heavily on search engine searches so you can find examples of working code and discussions about code that speak to your questions.</p> 
             </article>
             <article>
