🌸🐿 Checkpoint ./style.css:282805/44 ./index.html:282805/2514

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                       </a>
                     </li>
                     <li>Use Glitch.com's editor to edit the code in the <a class="solutions-edit-link" target="_blank">45-exercises.js</a> file.</li>
-                    <li>View your <a href="" class="preview" target="_blank">index.html</a> with the "🔎 Preview" icon in the Glitch editor. The "Preview" icon is at the bottom of the screen. Recommend using "Preview in a New Window"</li>
+                    <li>View your <a href="" class="preview" target="_blank">index.html</a> with the "🔎 Preview" icon in the Glitch editor. The "Preview" icon is at the bottom of the <a href="" class="solutions-edit-link" target="_blank">code editor</a>. Recommend using "Preview in a New Window"</li>
                     <li>The keyboard shortcut to launch the application is Ctrl + Shift + R (keyboard shortcuts are powerful helpers)</li>
                 </ol>
             </article>
@@ -81,14 +81,12 @@
                 <h2>Troubleshooting</h2>
                 <h3>General Guidance</h3>
                 <ul>
-                    <li>Your JS code runs from top to bottom</li>
                     <li>Solve the exercises one at a time and in order.</li>
                     <li>Fix any syntax errors before moving forward with the exercises</li>
-                    <li>Any synax error in your code may halt the execution of all of your code.</li>  
-                    <li>Double check your spelling. Capitalization matters in programming.</li>
-                    <li>Solve one thing at a time and avoid jumping around.</li>
+                    <li>Any synax error in your code may halt the execution of all of your code.</li>
+                    <li>Spelling and capitalization matter in programming.</li>
                     <li>Each exercise must pass its tests in order for you to see the next exercise.</li>
-                    <li>If you have an incorrect answer or syntax error on an exercise, fix it before moving forward.</li>
+                    <li>If you have an incorrect answer or syntax error, fix it before moving forward.</li>
                 </ul>
             </article>
             <hr>
@@ -141,6 +139,9 @@
             <hr>
             <article>
                 <p>If you notice any typos, misspellings, or mistakes, please triple check your work and <a href="https://github.com/ryanorsinger/101-exercises-js/issues" target="_blank">open an issue on GitHub</a> citing both the line number and exercise number.</p>
+                <p>
+                  If you want much more practice with JS, work through <a href="https://101-exercises.glitch.me/" target="_blank">101 JS Exercises</a>
+                </p>
             </article>
           
         </section>
